--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@ img {
   border-bottom: 1px solid #e7e9fc;
   max-width: 1440px;
   margin: 0 auto;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -89,6 +90,8 @@ gap: 40px;
 
 .header-menu-items {
   display: block;
+  position: relative;
+  color: #404bbf;
 }
 
 .header-menu-link {
@@ -99,6 +102,8 @@ gap: 40px;
   color: #2e2f42;
   padding: 24px 0;
   transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-link:hover,
@@ -141,6 +146,8 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
 transition-property: color;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-list-link:hover,
@@ -164,6 +171,7 @@ transition-property: color;
   background-repeat: no-repeat;
   margin: 0 auto;
   max-width: 1440px;
+  background-size: cover;
 }
 
 .hero-title {
@@ -195,6 +203,9 @@ transition-property: color;
   height: 56px;
   border: none;
   border-radius: 4px;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -239,8 +250,10 @@ border: 1px solid #8e8f99;
   border-radius: 4px;
   width: 264px;
   height: 112px;
-  padding: 24px 100px;
-  margin-bottom: 8px;
+display: flex;
+align-items: center;
+justify-content: center;
+
 }
 
 .feature-icon-svg {
@@ -294,13 +307,13 @@ border: 1px solid #8e8f99;
 .team-list-item {
   background: #fff;
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-image {}
 
 .container-team-description {
   padding: 32px 0;
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-subtitle {
@@ -330,10 +343,30 @@ border: 1px solid #8e8f99;
   margin: 8px 16px 0px 16px;
 }
 
+.icon-link {
+width: 100%;
+height: 100%;
+background-color:#4d5ae5;
+border-radius:50%;
+display: flex;
+align-items: center;
+justify-content: center;
+transition-property: background-color;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-link:hover,
+.icon-link:focus{
+  background-color: #404bbf;
+}
+
+
 .team-icon-svg {
   display: flex;
   width: 40px;
   height: 40px;
+  fill: #f4f4fd;
 }
 
 /* ----------------------------TEAM END------------------------------------- */
@@ -349,13 +382,9 @@ border: 1px solid #8e8f99;
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .container-portfolio:hover {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-title {
@@ -380,6 +409,10 @@ border: 1px solid #8e8f99;
   width: calc((100% - 48px) / 3);
     position: relative;
     overflow: hidden;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    transition: box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-images {
@@ -387,25 +420,27 @@ border: 1px solid #8e8f99;
 }
 
 .portfolio-list-item:hover .overlay {
-  transform: translateY(0);
+  transform: translateY(0%);
   cursor: pointer;
 }
-.overlay {
-  padding:40px 32px 164px 32px; 
-  background-color: #4d5ae5;
-  color: #f4f4fd;
-  font-weight: 400;
+.overlay {}
+
+
+.portfolio-paragraph {
+  position: absolute;
+  top: 0;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform: translateY(100%);
-  transition: transform 250ms ease-in-out;
+  color:#f4f4fd;
+  padding: 40px 32px;
+background-color: #4d5ae5;
+height: 100%;
+width: 100%;
+transform: translateY(100%);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 
 .portfolio-subtitle {
@@ -438,10 +473,13 @@ border: 1px solid #8e8f99;
 color:#2e2f42;
   gap: 120px;
   display: flex;
+  align-items: baseline;
+
 }
 
 .footer-title {
   width: 264px;
+  margin-right: 120px
 }
 
 .end-logo {
@@ -488,10 +526,27 @@ color: #f4f4fd;
   gap: 16px;
 }
 
+.footer-icon-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-icon-link:hover,
+.footer-icon-link:focus {
+  background-color: #31d0aa;
+}
+
 .footer-icon-svg {
   display: flex;
-  width: 40px;
-  height: 40px;
+width: 24px;
+height: 24px;
+fill: #f4f4fd;
 }
 
 /* ---------------------END end--------------------------------- */
