--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ display: flex;
 gap: 40px;
 }
 
-.header-menu-items {
+.header-menu-item {
   display: block;
   position: relative;
   color: #404bbf;
@@ -253,7 +253,7 @@ border: 1px solid #8e8f99;
 display: flex;
 align-items: center;
 justify-content: center;
-
+margin-bottom: 8px;
 }
 
 .feature-icon-svg {
@@ -547,6 +547,11 @@ color: #f4f4fd;
 width: 24px;
 height: 24px;
 fill: #f4f4fd;
+}
+
+.footer-icon-item {
+  margin-bottom: 8px;
+  height: 40px;
 }
 
 /* ---------------------END end--------------------------------- */
