--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ img {
 }
 
 .accent {
- color: #2e2f42;
+color: #2e2f42;
 }
 
 .header-menu-list {
@@ -91,7 +91,6 @@ gap: 40px;
 .header-menu-item {
   display: block;
   position: relative;
-  color: #404bbf;
 }
 
 .header-menu-link {
@@ -105,14 +104,15 @@ gap: 40px;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
-    color: #404bbf;
 }
 
 .header-menu-link:hover,
 .header-menu-link:focus {
+  color: #404bbf;
 }
 
 .header-menu-link:after {
+  content: "";
   position: absolute;
   left: 0;
   bottom: -1px;
@@ -121,7 +121,6 @@ gap: 40px;
   height: 4px;
   border-radius: 2px;
 background-color: #404bbf;
-  content: "";
 }
 
 .address {
@@ -137,7 +136,6 @@ margin-left: 332px;
 
 .address-list-item {
   padding: 24px 0;
-
 }
 
 .address-list-link {
@@ -384,9 +382,6 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   border-top: none;
 }
 
-.container-portfolio:hover {
-}
-
 .portfolio-title {
   font-weight: 700;
   font-size: 36px;
@@ -407,41 +402,36 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
-    position: relative;
-    overflow: hidden;
-    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-    transition: box-shadow;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-images {
-  
+.overlay {
+  position: relative;
+  overflow: hidden;
 }
 
-.portfolio-list-item:hover .overlay {
-  transform: translateY(0%);
-  cursor: pointer;
-}
-.overlay {}
-
-
-.portfolio-paragraph {
+.overlay-p {
   position: absolute;
   top: 0;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color:#f4f4fd;
+  color: #f4f4fd;
   padding: 40px 32px;
-background-color: #4d5ae5;
-height: 100%;
-width: 100%;
-transform: translateY(100%);
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #4d5ae5;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
+.portfolio-list-item:hover .overlay-p {
+  transform: translateY(0%);
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  cursor: pointer;
+}
 
 .portfolio-subtitle {
   font-weight: 500;
