--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,7 @@ gap: 40px;
 .header-menu-item {
   display: block;
   position: relative;
+  color: #404bbf;
 }
 
 .header-menu-link {
@@ -425,6 +426,10 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   height: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list-item:hover {
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-list-item:hover .overlay-p {
