--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,7 @@ gap: 40px;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
+  color: #404bbf;
 }
 
 .header-menu-link:hover,
@@ -342,6 +343,11 @@ margin-bottom: 8px;
   margin: 8px 16px 0px 16px;
 }
 
+.icon-item {
+  width: 40px;
+  height: 40px;
+}
+
 .icon-link {
 width: 100%;
 height: 100%;
@@ -360,11 +366,8 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #404bbf;
 }
 
-
 .team-icon-svg {
   display: flex;
-  width: 40px;
-  height: 40px;
   fill: #f4f4fd;
 }
 
